option java_package = "com.squareup.protos.simple";
option java_outer_classname = "SimpleMessageContainer";

message SimpleMessage {
  message NestedMessage {
    // An optional int32
    optional int32 bb = 1;
  }

  enum NestedEnum {
    FOO = 1;
    BAR = 2;
    BAZ = 3;
  }

  // An optional int32
  optional int32 optional_int32 = 1 [default = 123];
  // An optional NestedMessage
  optional NestedMessage optional_nested_msg = 2;
  optional NestedEnum default_nested_enum = 3 [default = BAZ];

  // A required int32
  required int32 required_int32 = 4 [default = 456];

  // A repeated double
  repeated double repeated_double = 5;
}
