/*
 * Copyright 2013 Square Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package squareup.protos.foreign;

option java_package = "com.squareup.wire.protos.foreign";
option java_outer_classname = "Foreign";

import "google/protobuf/descriptor.proto";

enum ForeignEnum {
  BAV = 0;
  BAX = 1;
}

message ForeignMessage {
  extensions 100 to 200;

  optional int32 i = 1;
}

extend google.protobuf.MessageOptions {
  optional ForeignMessage foreign_message_option = 50007;
}

extend google.protobuf.EnumValueOptions {
  optional bool foreign_enum_value_option = 70002;
}
