/*
 * Copyright 2018 Square Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package squareup.protos.kotlin.oneof;

option java_package = "com.squareup.wire.protos.kotlin";

/**
 * It's a one of message.
 */
message OneOfMessage {

  // Must have a foo or a bar or a baz.
  oneof choice {
    // What foo.
    int32 foo = 1;
    // Such bar.
    string bar = 3;
    // Nice baz.
    string baz = 4;
  }
}
