/*
 * Copyright 2014 Square Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package squareup.protos.redacted_test;

option java_package = "com.squareup.wire.protos.redacted";

import "google/protobuf/descriptor.proto";
import "option_redacted.proto";

message NotRedacted {
  optional string a = 1;
  optional string b = 2;
}

message Redacted {
  optional string a = 1 [(squareup.protos.redacted_option.redacted) = true];
  optional string b = 2 [(squareup.protos.redacted_option.redacted) = false];
  optional string c = 3;
  extensions 10 to 20;
}

message RedactedChild {
  optional string a = 1;
  optional Redacted b = 2;
  optional NotRedacted c = 3;
}

message RedactedCycleA {
  optional RedactedCycleB b = 1;
}

message RedactedCycleB {
  optional RedactedCycleA a = 1;
}

message RedactedRepeated {
  repeated string a = 1 [(squareup.protos.redacted_option.redacted) = true];

  // Values in the repeated type need redacting.
  repeated Redacted b = 2;
}

message RedactedRequired {
  required string a = 1 [(squareup.protos.redacted_option.redacted) = true];
}

message RedactedExtension {
  optional string d = 1 [(squareup.protos.redacted_option.redacted) = true];
  optional string e = 2;
}

extend Redacted {
  optional RedactedExtension extension = 10;
}
